# lama-cleaner

./: build_docker.sh  debug_distributed_system.py  debug_test.py  final_system_report.md  pyproject.toml  quick_start.py  simple_debug.py  start_debug.py  system_status_report.md  test_error_tracker.py  test_log_management.py  test_logging_system.py  test_performance_monitor.py  test_privacy_protection.py
.kiro/hooks/: code-test-check.kiro.hook
.kiro/specs/comprehensive-logging-system/: design.md  requirements.md  tasks.md
.kiro/specs/distributed-processing-architecture/: design.md  requirements.md  (+1 more)
.kiro/steering/: language.md  product.md  structure.md  tech.md  uv-management.md
config/: default.yaml  logging_config.json
data/: distributed.db
lama_cleaner/: api_logging.py  error_tracker.py  log_manager_cli.py  logging_config.py  model_manager.py  parse_args.py  performance_monitor.py  privacy_protector.py  server.py
lama_cleaner/app/: package-lock.json  package.json
lama_cleaner/distributed/: .github_workflows_test.yml  COMMUNICATION_SYSTEM_SUMMARY.md  Makefile  QUEUE_SYSTEM_SUMMARY.md  README.md  TASK_5_COMPLETION_REPORT.md  __init__.py  api_integration.py  capability_detector.py  communication_integration.py  config.py  control_channel.py  health_monitor.py  logging.py  models.py  node_manager.py  pytest.ini  queue_manager.py  scheduler.py  state_manager.py  storage.py  task_control.py  task_manager.py  task_processor.py  utils.py  websocket_manager.py  worker_node.py
logs/: structured_logs.db
test_logs/: structured_logs.db  structured_logs.json
(+70 files in other folders)
