[project]
name = "lama-cleaner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.11"
dependencies = [
    "controlnet-aux==0.0.3",
    "diffusers==0.16.1",
    "flask==2.2.3",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "flaskwebgui==0.3.5",
    "gradio==3.50.2",
    "huggingface-hub==0.14.1",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "opencv-python>=4.6.0",
    "piexif==1.1.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.2",
    "redis>=6.4.0",
    "rich>=14.1.0",
    "safetensors>=0.6.2",
    "simple-websocket>=1.1.0",
    "torch>=1.9.0",
    "transformers==4.27.4",
    "werkzeug==2.2.2",
    "yacs>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
